--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300&display=swap');
 body, html {
-	height: 100%;
-	width: 100%;
 	margin: 0;
 	padding: 0;
 	font-family: 'Montserrat', sans-serif;
@@ -26,8 +24,7 @@ li {
 
 .container {
 	background: rgb(51,54,69);
-	width: 100%;
-	height: 100%;
+
 }
 
 .row {
@@ -93,8 +90,10 @@ li {
 
 /* AFTER OF NAVBAR */
 
+
 .user-information {
 	width: 100%;
+	height: 10rem;
 	background-color: red;
 	display: flex;
 	justify-content: space-around;
@@ -104,4 +103,87 @@ li {
 .user-information > div:nth-child(4) > p:nth-child(2) {
 	margin: 0 auto;
 	color: white;
+}
+
+.user-avatar {
+	width: 5rem;
+	height: 5rem;
+}
+
+.article-text {
+	width: 35%;
+	height: 12.5rem;
+}
+
+.article-information {
+	position: relative;
+	width: 	55%;
+	left: 10%;
+	height: 12.5rem;
+}
+
+
+/* ASSETS */
+
+.fs-30 {
+	font-size: 30px;
+}
+
+.fs-25 {
+	font-size: 25px;
+}
+
+.fs-20 {
+	font-size: 20px;
+}
+
+.fs-18 {
+	font-size: 18px;
+}
+
+.fs-15 {
+	font-size: 15px;
+}
+
+.blue-dark-1 {
+	background-color: rgb(51, 54, 69);
+}
+
+.blue-dark-2 {
+	background-color: rgb(66, 69, 86);
+}
+
+.user-score {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+}
+
+.score {
+	height: 13rem;
+	width: 13rem;
+}
+
+.center {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.center-x {
+	display: flex;
+	justify-content: center;
+}
+
+.center-y {
+	display: flex;
+	align-items: center;
+}
+
+.txt-gray {
+	color: #dadada;
+}
+
+.txt-white {
+	color: #eeeeee;
 }
