--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -5,20 +5,18 @@
     font-size:16px;
 }
 
+
+
 #principalLogin{
     position: absolute;
     display: flex;
     width: 100%;
-    height: 100%;
-    background-color: coral;
-   
-    
+    min-height: 100%;
 }
     #divimagenLogin{
     display: flex;
     /* width:calc(100%-700px); */
     width: 100%;
-    height: 100vh;
     background-color:white;
     flex-wrap: wrap;    
     justify-content: center;
@@ -31,12 +29,14 @@
     background-color:#333645;
     display: flex;
     width:75%;
-    height: 100%;
     
     /* flex-shrink: 10px; */
     justify-content:center;
     /* align-items: center; */
     flex-wrap: wrap;
+    
+    padding: 1rem;
+    box-sizing: border-box;
     }
         #contenidodatosLogin{
             background-color: #333645;
@@ -51,13 +51,19 @@
             text-align: center;
             font-size: 3rem;
             font-weight: 700;
-            color: #707070;
+            color: #d4cfcf;
             
         }
+
+        input[type=password], input[type=text] {
+            padding-top: .5rem;
+            padding-left: .5rem;
+        }
+       
         #subtituloLogin{
             padding-top:5%;
             padding-bottom:5%;
-            color: #707070;
+            color: #f2f2f2;
         }
         #inputLogin{
             width: 100%;
@@ -65,18 +71,17 @@
             border-radius: 0.2rem;
             border-style: none;
         }
-        #inputLogin:placeholder{
-            color:#707070;
-        }
         ::placeholder { /* WebKit, Blink, Edge */
             color: #ccc;
+            display: flex;
+            margin-top:10px;
         }
         #parrafoLogin{
             margin-top: 20%;
         }
         #parrafoLogin>p{
             font-size:1rem;
-            color: #707070;
+            color: #f2f2f2;
         }
         #botonLogin{
             background:#00B0FF;
