--- a/compilador/css/compilador.css
+++ b/compilador/css/compilador.css
@@ -48,7 +48,7 @@
     
     .row {
         display: flex;
-        padding: 2% 5%;
+        padding: 1% 5%;
     }
     
     .navbar-logo {
@@ -69,12 +69,12 @@
         display: flex;
         justify-content: flex-end;
         align-items: flex-end;
-        width: 50px;
-        height: 50px;
+        width: 40px;
+        height: 40px;
         border-radius: 50%;
         background-color: #eeeeee;
         background-repeat: no-repeat;
-       background-size: 30px 30px;
+       background-size: 22px 22px;
        background-position: center; 
         background-image: url('../img/notification.png');
         cursor: pointer;
@@ -99,7 +99,7 @@
     .navbar-profile {
         display: flex;
         justify-content: space-around;
-        width: 15%;
+        width: 10%;
     }
     
     .navbar-avatar {
@@ -156,111 +156,139 @@
 
         width: 100%;
         height: 85%;
-     
-        justify-content: center;
+        justify-content:center;
         display: flex;
         align-items: center;
-        flex-direction: row;
-    }
-    #mid-container-left{
-        width: 60%;
-        height: 100%;
-        background-color: #3a3d49;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-    }
-    #mid-container-right{
-        width: 35%;
-        height: 100%;
-        background-color: #3a3d49;
        
-    }
-    #mid-container-left-top{
-        width: 100%;
-        height: 7%;
-        display: flex;
-        align-items: center;
-        background-color: #3a3d49;
-        color: white;
-        font-size: 14px;
+        
         
     }
-    #opciones-container{
-        display: flex;
-        align-items: center;
-        margin-left: 15px;
+    #mid-container-content{
+        width: 90%;
         height: 100%;
-        width: 50%;
-        
-    }
-    #run-container{
-        width: 50%;
-        height: 100%;
-        
+        justify-content: space-between;
         display: flex;
-        justify-content: end;
         align-items: center;
 
     }
-    #run-button{
-        width: 100px;
-        height: 25px;
-        border: none;
-        cursor: pointer;
-        color: white;
-        font-weight: 600;
-        border-radius: 3px;
-        background-color: green ;
-        margin-right: 30px;
+    #mid-left-container{
+        background-color: aqua;
+        width: 60%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
     }
-    #erase-button{
-        width: 60px;
-        height: 25px;
-        border: none;
-        cursor: pointer;
-        color: white;
-        font-weight: 600;
-        border-radius: 3px;
-        background-color: red ;
-        margin-right: 10px;
-    }
-    #run-button:hover{
-        background-color: rgb(1, 141, 1) ;
-    }
-    #mid-container-left-middle{
+    #compilador-top{
         width: 100%;
-        height: 92%;
-       
-       margin-top: 1%;
+        height: 15%;
+        background-color: #333645;
+        color: white;
         display: flex;
         align-items: center;
-        justify-content: center;
-       
+        font-size: 20px;
     }
-    #numeracion{
-        width: 27px;
-        height: 100%;
-        background-color: #3a3d49;
-       
+    #titulo{
+        width: 60%;
     }
-    .numero{
-        width: 100%;
-        height: 18.4px;
-        background-color: rgb(18, 18, 53);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: white;
-        border-bottom:1px solid #4a4e5d;
-    }
-    #textarea{
-        width: calc(100% - 28px);
-        height: 100%;
-        background-color: #4a4e5d;
-        border: none;
-        color: white;
-        resize: none;
+    #buttons{
+        width: 40%;
         
+        height: 100%;
+        display: flex;
+        justify-content: end;
+        align-items: center;
+    }
+    #play{
+        background-color: rgb(35, 221, 81);
+    }
+    #play:hover{
+        background-color: rgb(24, 153, 56);
+    }
+    #borrar{
+       margin-right: 35px;
+       background-color: #2399DD;
+    }
+    #borrar:hover{
+       
+        background-color: rgb(23, 114, 167);
+     }
+    #buttons>button{
+       cursor: pointer;
+        width: 50px;
+        
+        color: white;
+        border:none;
+        height: 25px;
+    }
+    #lines-container{
+        width: 100%;
+       
+        display: flex;
+        flex-direction: column;
+        background-color: #424556;
+    }
+ 
+   
+    
+    .number{
+        width: 35px;
+        background-color: #9A9A9A;
+        color: white;
+        border-bottom: 1px solid #333645;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+    }
+    .textarea{
+        width: 100%;
+        height: 100%;
+        background: none;
+        border: none;
+        resize: none;
+        color: white;
+    }
+    .letras-contenido{
+        color: red;
+        width: 100%;
+        padding-left: 17px;
+    }
+    
+    .line{
+        width: 100%;
+        height: 19px;
+        background-color:424556;
+        display: flex;
+        margin: 1px;
+    }
+    #compilador-mid{
+        width: 100%;
+        height: 85%;
+        background-color: #424556;
+        overflow: auto;
+    }
+    #mid-rigth-container{
+       
+        width: 38%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+    #salida-top{
+        font-size: 17px;
+        font-weight: 700;
+        color: white;
+        width: 100%;
+        height: 15%;
+        display: flex;
+        align-items: center;
+        justify-content: end;
+        
+    }
+    #salida-middle{
+        width: 100%;
+        height: 85%;
+        background-color: #424556;
     }
 }
