*feat* Compiler working: 1st rev
Added the functions for the compiler to work. Lack of styles in the table

--- a/Templates/compilador.html
+++ b/Templates/compilador.html
@@ -48,7 +48,7 @@
                             <p id="titulo">Compilador <b>Oracle</b></p>
                             <div id="buttons">
                                 <button id="borrar">Clear</button>
-                                <button id="play">Play</button>
+                                <button id="play" onclick="compile()"> Play</button>
                             </div>
                            
                         </div>
@@ -60,7 +60,7 @@
                                 </div>
                                 <div id="lines-container">
                                     
-                                    <div class="line"> <div class="letras-contenido">/***********/Inserta tus Sentencias SQl/*************/</div></div>
+                                    <div class="line"> <div class="letras-contenido" id="letras-contenido">/***********/Inserta tus Sentencias SQl/*************/</div></div>
                                     
                                    
                                 </div>
