Se agregaron nuevamente el login y se agrego la vista de ejejercicios

--- a/templates/login.html
+++ b/templates/login.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/estilos.css">
+    <link rel="stylesheet" href="estilos.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">    <title>Login</title>
 </head>
 <body>
     <div id="principalLogin">
         <div id="divimagenLogin">
-            <img src="../static/img/imagenlogin.png" alt="">
+            <img src="imagenlogin.png" alt="">
         </div>
 
         <div id="divdatosLogin">    
+           <!--  <div id="divtituloLogin">
+                
+            </div> -->
             <div id="contenidodatosLogin">
                 <form action="#" method="POST">
                     <p id="tituloLogin">Iniciar Sesión</p>
