--- a/templates/actividadesEjercicios.html
+++ b/templates/actividadesEjercicios.html
@@ -14,7 +14,7 @@
 				<img id="imagenback" src="imagenback.png">
 				<img id="imagenperfil" src="imagenperfil.jpeg" class="imgRedonda">
 				<p id="tituloEjercicio" class="titulo-data">Data</p>
-				<p id="tituloEjercicio" class="titulo-base">Base</p>
+				<p id="tituloEjercicio" class="titulo-base">Bass</p>
 			</div>
 			<div id="unidadesEjercicios">
 				<p>Unidades</p>
