--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,9 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/indexEstilos.css">
+    <link rel="stylesheet" href="{% static 'css/indexEstilos.css' %}">
+    <!-- <link rel="stylesheet" href="css/indexEstilos.css"> -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
     <title>Inicio</title>
 </head>
@@ -26,7 +28,8 @@
 				</div>
 				<div class="navbar-notification navbar-avatar">
 					<div class="navbar-picture">
-                        <img src="./img/perfil.jpg" alt="" class="img-profile">
+                        <!-- <img src="./img/perfil.jpg" alt="" class="img-profile"> -->
+                        <img src="{% static 'img/perfil.jpg' %}" alt="" class="img-profile">
                     </div>
 				</div>
 			</div>
@@ -36,7 +39,8 @@
     <div id="mid-container">
     
             <div id="img-dashboard-container">
-                <img src="./img/code.png" alt="" class="img">
+                <img src="{% static 'img/code.png' %}}" alt="" class="img">
+                <!-- <img src="./img/code.png" alt="" class="img"> -->
             </div>
             <div id="right-dashboard-container">
             <div id="right-dashboard-container-top">
