--- a/Static/css/compilador.css
+++ b/Static/css/compilador.css
@@ -174,6 +174,9 @@
         height: 47%;
         background-color: #424556;
         box-shadow: 2px 2px 8px 0px rgb(43, 42, 45);
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     #mid-container-ajuste{
         justify-content:space-between;
@@ -291,7 +294,26 @@
        
         
     }
-    
+    #tablas-container{
+   
+        height: 100%;
+       
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        overflow: auto;
+        }
+        table {     font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+            font-size: 12px;    margin: 10px;     width: 480px; text-align: left;    border-collapse: collapse; }
+        
+        th {     font-size: 13px;     font-weight: normal;     padding: 8px;     background: #b9c9fe;
+            border-top: 4px solid #aabcfe;    border-bottom: 1px solid #fff; color: #039; }
+        
+        td {    padding: 8px;     background: #e8edff;     border-bottom: 1px solid #fff;
+            color: #669;    border-top: 1px solid transparent; }
+        
+        tr:hover td { background: #d0dafd; color: #339; }
+        
     
 
 }
