--- a/Templates/compilador.html
+++ b/Templates/compilador.html
@@ -51,7 +51,40 @@
                                 <textarea name="code" id="code"></textarea>
                         </div>
                     </div>
-                    <div id="container-bottom"></div>
+                    <div id="container-bottom">
+
+                        <div id="tablas-container">
+                           
+                            <table class="responsive-table">
+                              <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Item Name</th>
+                                    <th>Item Price</th>
+                                </tr>
+                              </thead>
+                      
+                              <tbody>
+                                <tr>
+                                  <td>Alvin</td>
+                                  <td>Eclair</td>
+                                  <td>$0.87</td>
+                                </tr>
+                                <tr>
+                                  <td>Alan</td>
+                                  <td>Jellybean</td>
+                                  <td>$3.76</td>
+                                </tr>
+                                <tr>
+                                  <td>Jonathan</td>
+                                  <td>Lollipop</td>
+                                  <td>$7.00</td>
+                                </tr>
+                              </tbody>
+                            </table>
+  
+                      </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -64,5 +97,6 @@
      <script src="{% static 'js/lib/codemirror.js' %}"></script>
      <script src="{% static 'js/lib/codemirror.js' %}"></script>
      <script src="{% static 'js/lib/codemirror.js' %}"></script>
+     <script src="./js/llamadaboton.js" ></script>
 </body>
 </html>
