--- a/Static/js/compilador lib/codemirror.css
+++ b/Static/js/compilador lib/codemirror.css
@@ -119,7 +119,7 @@
 
 .cm-s-default .cm-keyword {color: rgb(8, 142, 202);}
 .cm-s-default .cm-atom {color: #219;}
-.cm-s-default .cm-number {color: #164;}
+.cm-s-default .cm-number {color: #36e2bd;}
 .cm-s-default .cm-def {color: #00f;}
 .cm-s-default .cm-variable,
 .cm-s-default .cm-punctuation,
