--- a/Templates/compilador.html
+++ b/Templates/compilador.html
@@ -43,7 +43,7 @@
                         <div id="compilador-top">
                             <p id="titulo">Compilador <b>Oracle</b></p>
                             <div id="buttons">
-                                <button id="borrar">Clear</button>
+                                <button id="borrar" onclick="limpiar()">Clear</button>
                                 <button id="play" onclick="compile()"> Play</button>
                             </div>
                         </div>
