--- a/Static/css/compilador.css
+++ b/Static/css/compilador.css
@@ -301,7 +301,9 @@
         display: flex;
         justify-content: start;
         align-items: start;
-        overflow: auto;
+        overflow-y: auto;
+        overflow-x: auto;
+        width: 100%;
         }
         table {     font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
             font-size: 12px;    margin: 10px;     width: 480px; text-align: left;    border-collapse: collapse; }
@@ -309,11 +311,13 @@
         th {     font-size: 13px;     font-weight: normal;     padding: 8px;     background: #b9c9fe;
             border-top: 4px solid #aabcfe;    border-bottom: 1px solid #fff; color: #039; }
         
-        td {    padding: 8px;     background: #e8edff;     border-bottom: 1px solid #fff;
+        td {    padding: 8px;    ;     border-bottom: 1px solid #fff;
             color: #669;    border-top: 1px solid transparent; }
         
-        tr:hover td { background: #d0dafd; color: #339; }
-        
+        tr:hover td { background: #97a3cf; color: #339; }
+        table tr:nth-child(odd) {background-color: #c1c9e9;}
+
+        table tr:nth-child(even) {background-color: #e8edff;}
     
 
 }
