*fix* Fixed the models and admin in Django
The relations in Django models were wrong. I put it together and also added those models in the Django Administrator, so any administrator could modified this withouth having to access to the data base

--- a/Templates/navbar.html
+++ b/Templates/navbar.html
@@ -1,8 +1,9 @@
+{% load static %}
 <html lang="en"><head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<link rel="stylesheet" href=".././static/css/styles.css">
+	<title>Perfil</title>
+	<link rel="stylesheet" href="{% static 'css/estilosEladio.css' %}">
 </head>
 <body>
 
@@ -36,11 +37,11 @@
 				</div>
 				<div>
 					<p class="txt-white"><strong>¡Bienvenido!</strong></p>
-					<p class="txt-gray">Sanchez Carlos Manuel</p>
+					<p class="txt-gray">{{request.user.get_full_name}}</p>
 				</div>
 				<div>
 					<p class="txt-white"><strong>Correo</strong></p>
-					<p class="txt-gray">cmsmcmsm230598@gmail.com</p>
+					<p class="txt-gray">{{request.user.email}}</p>
 				</div>
 				<div>
 					<p class="txt-white"><strong>Promedio</strong></p>
